A Tag title position issue on IOS safari

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -274,7 +274,7 @@ nav {
         <path d='M1100 411l-198 -199l-353 353l-353 -353l-197 199l551 551z'/>\
       </svg>");
     background-repeat: no-repeat;
-    background-position: calc(100% - 7px) 50%;
+    background-position: calc(100% - 10px) 50%;
 }
 
 .content_ragister textarea {
@@ -297,9 +297,10 @@ nav {
     max-width: 200px;
     height: 50px;
     font-size: 18px;
+    line-height: 50px;
     display: block;
     margin-top: 40px;
-    padding: 11px;
+    padding: 0;
 }
 
 .later_icon {
